--- a/AbdulWahab.html
+++ b/AbdulWahab.html
@@ -1,14 +1,44 @@
-<Doctype html>
+<Doctype html lang="en">
 <head>
+     <meta hhtp-equiv="contnt-Type" content="text/html; charset=utf-8">
+     <link rel="stylesheet" type="text/css" href="MyStyle.css">
+
+  <section align="center">
   <img src="https://res.cloudinary.com/fawklee/image/upload/v1566581044/IMG-20190203-WA0003_nygkjg.jpg" width="202" height="270" alt="AbdulWhab k. Fasasi">
-  <title>AbdulWahab  K. Fasasi Resume
+  </section>
+
+  <title>
+  <h3>AbdulWahab  K. Fasasi Resume</h3>
   </title>
+<style type="text/css">
+  div {
+    width: auto;
+    background: rgb(190, 231, 236);
+    color: black;
+  }
+
+  body {
+    font: 12px sans-serif;
+  }
+
+  h1 {
+    font-family: 'Times New Roman', Times, serif;
+  }
+
+</style>
+
 </head>
-
 <body>
-<h1 align="center"> ABDULWAHAB K. FASASI </h1>
-<p align="center"> <i>11, Mercy Avenue, Onibudo, Akute, Ogun State</i><br> <strong>2348175702501, 2347054500147</strong><br> Email: fawklee7@gmail.com </p>
+      
+<h1 align="Center"> ABDULWAHAB K. FASASI </h1>
 
+<div class="address">
+
+<p align="center"> <i>11, Mercy Avenue, Onibudo, Akute, Ogun State</i><br> <strong>2348175702501, 2347054500147</strong><br> Email: fawklee7@gmail.com<br> GitHub: <a href="https://github.com/Fawk-Lee">GitHub</a> </p>
+
+</div>
+
+<div class="details">
 <hr width="90%" align="center">
 
 <h3> <u> <strong>PERSONAL DATA</strong> </u> </h3>
@@ -46,8 +76,16 @@
 
 </table>
 
+</div>
+
+<div class="profile">
+
 <h3> <u>PERSONAL PROFILE</u> </h3>
 <p> I love finance, technology and business related activities. I'm a self motivated individual with great sense of creativity and human relations skills with a keen sense of value. I always look to contribute positively towards the achievement of organization goals in an outfit that offers mutual benefit, getting tasks done effectively and efficiently, as well as developing good relationships with colleagues and superiors. </p>
+
+</div>
+
+<div class="OBJECTIVES">
 
 <h3> <u>OBJECTIVES</u> </h3>
 
@@ -55,6 +93,10 @@
  <li>Strive for excellence and precision at all times, in all positions and circumstance while attaining professional distinction and proficiency.</li>
  <li>To always push my cognitive abilities to their limits through intellectual development and dedicated learning.</li>
 </ul>
+
+</div>
+
+<div class="experiences">
 
 <h3> <u>EXPERIENCE</u> <!--My experiences are only jobs undertaken after National Diploma--> </h3>
 
@@ -73,7 +115,11 @@
 
 </table>
 
-<h3> <u>INFORMATION TECHNOLOGY SKILLS</u> </h3>
+</div>
+
+<div class="skills"
+
+<p> <h3> <u> <b>INFORMATION TECHNOLOGY SKILLS</b> </u> </h3> </p>
 
 <ul>
  <li>Microsoft Office</li>
@@ -85,21 +131,52 @@
  <li>PeachTree (Sage50)</li>
  <li>(BANKS) BASIS</li>
  <li>ProcessMaker</li>
+ <li>HTML (Intermidiate)</li>
+ <li>CSS (Beginner)</li>
 </ul>
+
+</div>
+
+<div class="sector" id="education">
+
+  <style type="text/css">
+    table {
+      width: auto;
+      background: rgb(6, 101, 156);
+      color: black;
+      border: solid;
+    }
+  </style>
 
 <h3> <u>EDUCATIONAL QUALIFICATION</u> </h3>
 
-<h4> National Diploma in Business Administration & Management - 2016/2017 </h4>
-<p> Yaba College Of Technology, Lagos State. </p>
+<table>
 
-<h4> WASSCE - 2014 </h4>
-<p> The High Esteem College, Ojodu, Lagos. </p>
+  <tr>
+<td> <b>National Diploma in Business Administration & Management - 2016/2017</b> </td>
+<td> Yaba College Of Technology, Lagos State. </td>
+</tr>
+
+  <tr>
+<td> <b>WASSCE - 2014</b> </td>
+<td> The High Esteem College, Ojodu, Lagos. </td>
+  </tr>
+
+</table>
+
+</div>
+
+<div class="sector" id="projects">
 
 <h3> <u>MAJOR PROJECTS UNDERTAKEN</u> </h3>
 <ul>
   <li>ND Project: The impact of fringe benefit on employees performance.</li>
   <li>Analysis of Unilever Nigeria Plc annual report (As at 2015)</li>
 </ul>
+
+</div>
+
+<div class="sector" id="interests">
 
 <h3> <u>INTERESTS</u> <!--Interests are selected based on my personal hobbies and professional interests--> </h3>
 
@@ -110,8 +187,15 @@
   <li> Technology & Design </li>
 </ul>
 
+</div>
+
+<div class="footer" lang="en">
+
 <h3> <u>REFERENCES:</u> </h3>
 <p> To be made available on request </p>
 
+</div>
+
 </body>
+
 </html>
