added contact page

--- a/AbdulWahab.html
+++ b/AbdulWahab.html
@@ -11,14 +11,10 @@
   <h3>AbdulWahab  K. Fasasi Resume</h3>
   </title>
 <style type="text/css">
-  div {
-    width: auto;
-    background: rgb(190, 231, 236);
-    color: black;
-  }
+  
 
   body {
-    font: 12px sans-serif;
+    font: 14px sans-serif;
   }
 
   h1 {
@@ -138,16 +134,7 @@
 </div>
 
 <div class="sector" id="education">
-
-  <style type="text/css">
-    table {
-      width: auto;
-      background: rgb(6, 101, 156);
-      color: black;
-      border: solid;
-    }
-  </style>
-
+  
 <h3> <u>EDUCATIONAL QUALIFICATION</u> </h3>
 
 <table>
@@ -194,6 +181,11 @@
 <h3> <u>REFERENCES:</u> </h3>
 <p> To be made available on request </p>
 
+</div>
+
+<div class="btn">
+<button
+onclick="window.location.href='ContactForm.html';">Contact Me</button>
 </div>
 
 </body>
