--- a/ContactForm.html
+++ b/ContactForm.html
@@ -8,23 +8,25 @@
 <body>
 
 	<div class="wrapper">
+	<form action="#">
 		<div class="contact-form">
-			<form action="javascript:minlength.validate">
-				<teaxtrea name="test_min_length" id="" cols="30" rows="10" minlenth="20"></teaxtrea>
-			</form>
 			<div class="input-fields">
-				<input type="text" class="input" placeholder="Name" value="" minlength="4">
+			   <input type="text" class="input" placeholder="Name" minlength="4" required>
 				<input type="text" class="input" placeholder="Email Address">
 				<input type="text" class="input" placeholder="Phone">
 				<input type="text" class="input" placeholder ="Title">
 			</div>
 			<div class="msg">
-				<textarea placeholder="Message" value="" minlength="20">
+				<textarea placeholder="Message" minlength="20" required>
 				</textarea>
-				<div class="btn">Send</div>
 			</div>
+				<div class="btn">
+				<input type="submit" value="Submit">
+				</div>
 		</div>
+	</form>
 	</div>
 
 </body>
 </html>
+    
