--- a/ContactForm.html
+++ b/ContactForm.html
@@ -20,9 +20,8 @@
 				<textarea placeholder="Message" minlength="20" required>
 				</textarea>
 			</div>
-				<div class="btn">
-				<input type="submit" value="Submit">
-				</div>
+				<br>
+				<p><input type="submit" value="Submit"></p>
 		</div>
 	</form>
 	</div>
