Addition of PHP
Enhancing the form to submit form details to email through PHP components.

--- a/AbdulWahab.html
+++ b/AbdulWahab.html
@@ -32,48 +32,6 @@
 
 <p align="center"> <i>11, Mercy Avenue, Onibudo, Akute, Ogun State</i><br> <strong>2348175702501, 2347054500147</strong><br> Email: fawklee7@gmail.com<br> GitHub: <a href="https://github.com/Fawk-Lee">GitHub</a> </p>
 
-</div>
-
-<div class="details">
-<hr width="90%" align="center">
-
-<h3> <u> <strong>PERSONAL DATA</strong> </u> </h3>
-
-<table>
-  <tr>
-      <td> <b>Date of Birth:</b> </td>
-      <td> March 11, 1998 </td>
-  </tr>
-
-  <tr>
-      <td> <b>Sex</b> </td>
-      <td> Male </td>
-  </tr>
-
-  <tr>
-      <td> <b>Marital Status:</b> </td>
-      <td> Single </td>
-  </tr>
-
-  <tr>
-      <td> <b>State of Origin:</b> </td>
-      <td> Ogun State </td>
-  </tr>
-
-  <tr>
-      <td> <b>Local Government Area:</b> </td>
-      <td> Obafemi Owode </td>
-  </tr>
-  
-  <tr>
-      <td> <b>Nationality</b> </td>
-      <td> Nigerian </td>
-  </tr>
-
-</table>
-
-</div>
-
 <div class="profile">
 
 <h3> <u>PERSONAL PROFILE</u> </h3>
@@ -127,8 +85,11 @@
  <li>PeachTree (Sage50)</li>
  <li>(BANKS) BASIS</li>
  <li>ProcessMaker</li>
- <li>HTML (Intermidiate)</li>
- <li>CSS (Beginner)</li>
+ <li>HTML</li>
+ <li>CSS</li>
+ <li>JavaScript</li>
+ <li>PHP</li>
+
 </ul>
 
 </div>
@@ -159,6 +120,7 @@
 <ul>
   <li>ND Project: The impact of fringe benefit on employees performance.</li>
   <li>Analysis of Unilever Nigeria Plc annual report (As at 2015)</li>
+  <li>Go Foodie: Contributed to the devlopment of Go Foodie, a mobile application that allows users to order for African Foods in Nigeria. (Remote collaboration)</li>
 </ul>
 
 </div>
