--- a/ContactForm.html
+++ b/ContactForm.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Contact Form</title>
+	<meta name="description" content="AbdulWahab K. Fasasi personal contact page.I am a Public Speaker, Financial analyst, writer, coder.">
+	<meta name="keywords" content="Resume,Sample CV,Writer,Public Speaker,Coder,Financial Analyst,Nigerian Writer,AbdulWahab,Fasasi,Nigeria Investor,Investing,Analyst,Advisor,Entrepreneur.">
 	<meta charset="UTF-8">
 	<title>Contact Me Form</title>
 	<link rel="stylesheet" href="styles.css">
