--- a/AbdulWahab.html
+++ b/AbdulWahab.html
@@ -30,7 +30,7 @@
 
 <div class="address">
 
-<p align="center"> <i>11, Mercy Avenue, Onibudo, Akute, Ogun State</i><br> <strong>2348175702501, 2347054500147</strong><br> Email: fawklee7@gmail.com<br> GitHub: <a href="https://github.com/Fawk-Lee">GitHub</a> </p>
+<p align="center"> <i> Ogun State, Nigeria</i><br> <strong>2348175702501, 2347054500147</strong><br> Email: fawklee7@gmail.com<br> GitHub: <a href="https://github.com/Fawk-Lee">GitHub</a> <br> Twitter:<a href="https://twitter.com/Fawk_Lee">Twitter</a> </p>
 
 <div class="profile">
 
@@ -61,12 +61,6 @@
       <td> March 2018 - February 2019 </td>
   </tr>
 
-  <tr>
-      <td> <b>Marketing Officer</b> </td>
-      <td> K.A. Amusa & Co. </td>
-      <td> August 2017 - January 2018 </td>
-  </tr>
-
 </table>
 
 </div>
@@ -76,19 +70,12 @@
 <p> <h3> <u> <b>INFORMATION TECHNOLOGY SKILLS</b> </u> </h3> </p>
 
 <ul>
- <li>Microsoft Office</li>
-     <ol>
-        <li> MS Word </li>
-        <li> Excel </li>
-        <li> PowerPoint </li>
-     </ol>
+
  <li>PeachTree (Sage50)</li>
  <li>(BANKS) BASIS</li>
- <li>ProcessMaker</li>
  <li>HTML</li>
  <li>CSS</li>
- <li>JavaScript</li>
- <li>PHP</li>
+ <li>Android</li>
 
 </ul>
 
@@ -104,11 +91,6 @@
 <td> <b>National Diploma in Business Administration & Management - 2016/2017</b> </td>
 <td> Yaba College Of Technology, Lagos State. </td>
 </tr>
-
-  <tr>
-<td> <b>WASSCE - 2014</b> </td>
-<td> The High Esteem College, Ojodu, Lagos. </td>
-  </tr>
 
 </table>
 
@@ -135,13 +117,6 @@
   <li> Cooking & Hiking </li>
   <li> Technology & Design </li>
 </ul>
-
-</div>
-
-<div class="footer" lang="en">
-
-<h3> <u>REFERENCES:</u> </h3>
-<p> To be made available on request </p>
 
 </div>
 
